--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ blockquote, q {
   background: rgb(2,0,36);
   background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(35,130,150,1) 0%, rgba(32,131,152,1) 100%);
   color: white;
+  cursor: pointer;
   border-radius: 10px;
   padding:0 40px 0 40px;
   height: 70px;
@@ -212,12 +213,14 @@ blockquote, q {
 }
 
 button_whatsapp{
-  display: block; height: 2500px;}
+  display: block; 
+  height: 2500px;
+}
   
   #myBtn {
     position: fixed;
     bottom: 20px;
-    right: 30px;
+    right: 4vw;
     z-index: 9999;
     cursor: pointer;
   }
